XML 9.1.1 Päivitettiin käännökset vastaamaan käännöspohjan versiota 9.1.1.

--- a/Finnish/main/Settings.apk/res/values-fi-rFI/arrays.xml
+++ b/Finnish/main/Settings.apk/res/values-fi-rFI/arrays.xml
@@ -1347,4 +1347,9 @@ Huomautus: Vain Ubuntu 8.04!"</item>
         <item>Soittoääni</item>
         <item>Media</item>
     </string-array>
+    <string-array name="aod_clock_style_entries">
+        <item>Vaakasuora</item>
+        <item>Pystysuora</item>
+        <item>Linjassa</item>
+    </string-array>
 </resources>
