--- a/Finnish/main/CloudService.apk/res/values-fi-rFI/plurals.xml
+++ b/Finnish/main/CloudService.apk/res/values-fi-rFI/plurals.xml
@@ -57,15 +57,15 @@
         <item quantity="one">%d piilotettu kuva on synkronoimatta. Kirjaudu ulos, kun kaikki kohteet on synkronoitu pitääksesi ne; muussa tapauksessa kohteet poistetaan.</item>
     </plurals>
     <plurals name="micloud_manual_pause_and_resume">
-        <item quantity="other">Synkronointi pysäytetty. Jatka synkronointia %d minuutin jälkeen</item>
-        <item quantity="one">Synkronointi pysäytetty. Jatka synkronointia %d minuutin jälkeen</item>
+        <item quantity="other">Synkronointi on pysäytetty. Jatketaan %d minuutin kuluttua…</item>
+        <item quantity="one">Synkronointi on pysäytetty. Jatketaan %d minuutin kuluttua…</item>
     </plurals>
     <plurals name="last_sync_time_mins_ago">
-        <item quantity="other">" minuuttia sitten"</item>
-        <item quantity="one">" minuutti sitten"</item>
+        <item quantity="other">%s minuuttia sitten</item>
+        <item quantity="one">%s minuutti sitten</item>
     </plurals>
     <plurals name="last_sync_time_hours_ago">
-        <item quantity="other">" tuntia sitten"</item>
-        <item quantity="one">" tunti sitten"</item>
+        <item quantity="other">%s tuntia sitten</item>
+        <item quantity="one">%s tunti sitten</item>
     </plurals>
 </resources>
