--- a/Finnish/main/CloudService.apk/res/values-fi-rFI/arrays.xml
+++ b/Finnish/main/CloudService.apk/res/values-fi-rFI/arrays.xml
@@ -1,5 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string-array name="korea_permission_groups_descriptions">
+        <item>Tunnistaakseen synkronoidut kohteet</item>
+        <item>Synkronoidakseen viestit</item>
+        <item>Synkronoidakseen yhteystiedot</item>
+        <item>Synkronoidakseen kalenteritapahtumat</item>
+        <item>Synkronoidakseen kohteita, joilla on tallennustilaa käyttäviä palveluita</item>
+    </string-array>
+    <string-array name="korea_permission_groups_names">
+        <item>Puhelin</item>
+        <item>Tekstiviesti</item>
+        <item>Yhteystiedot</item>
+        <item>Kalenteri</item>
+        <item>Tallennustila</item>
+    </string-array>
     <string-array name="micloud_entrance_titleArray">
         <item>Synkronoi sovellustiedot</item>
         <item>Varmuuskopioi Aloitusnäytön ulkoasu</item>
