--- a/Finnish/main/Calendar.apk/res/values-fi-rFI/plurals.xml
+++ b/Finnish/main/Calendar.apk/res/values-fi-rFI/plurals.xml
@@ -9,8 +9,8 @@
         <item quantity="one">%1$d päivän kuluttua klo %2$s</item>
     </plurals>
     <plurals name="Ndays_ago_at">
-        <item quantity="other">%1$d päivää sitten klo %2$s</item>
-        <item quantity="one">%1$d päivä sitten klo %2$s</item>
+        <item quantity="other">%1$d päivää ennen klo %2$s</item>
+        <item quantity="one">%1$d päivä ennen klo %2$s</item>
     </plurals>
     <plurals name="Nhours">
         <item quantity="other">%d tuntia ennen</item>
