--- a/Finnish/main/ThemeManager.apk/res/values-fi-rFI/plurals.xml
+++ b/Finnish/main/ThemeManager.apk/res/values-fi-rFI/plurals.xml
@@ -16,6 +16,14 @@
         <item quantity="other">Päivityksiä saatavilla %1$d teemaa varten</item>
         <item quantity="one">Päivitys saatavilla %1$d teemaa varten</item>
     </plurals>
+    <plurals name="transparent_wallpaper_filter_hint">
+        <item quantity="other">Hae %1$d sovelluksen joukosta</item>
+        <item quantity="one">Hae %1$d sovelluksen joukosta</item>
+    </plurals>
+    <plurals name="transparent_wallpaper_filter_result">
+        <item quantity="other">Löytyi %1$d sovellusta</item>
+        <item quantity="one">Löytyi %1$d sovellus</item>
+    </plurals>
     <plurals name="wallpaper_staggered_item_text">
         <item quantity="other">%1$s | %2$d kuvaa</item>
         <item quantity="one">%1$s | %2$d kuva</item>
