--- a/Finnish/main/Calculator.apk/res/values-fi-rFI/plurals.xml
+++ b/Finnish/main/Calculator.apk/res/values-fi-rFI/plurals.xml
@@ -4,6 +4,14 @@
         <item quantity="other">%d kohdetta</item>
         <item quantity="one">%d kohde</item>
     </plurals>
+    <plurals name="loan_repayment_detail">
+        <item quantity="other">Yksityiskohtainen takaisinmaksu (%d vuotta)</item>
+        <item quantity="one">Yksityiskohtainen takaisinmaksu (%d vuosi)</item>
+    </plurals>
+    <plurals name="loan_repayment_detail_unit">
+        <item quantity="other">Yksityiskohtainen takaisinmaksu (%d vuotta), CNY</item>
+        <item quantity="one">Yksityiskohtainen takaisinmaksu (%d vuosi), CNY</item>
+    </plurals>
     <plurals name="mortgage_summary_years">
         <item quantity="other">%1$d vuotta (%2$d kuukautta)</item>
         <item quantity="one">%1$d vuosi (%2$d kuukautta)</item>
