--- a/Finnish/main/Calendar.apk/res/values-fi-rFI/arrays.xml
+++ b/Finnish/main/Calendar.apk/res/values-fi-rFI/arrays.xml
@@ -49,6 +49,12 @@
         <item>2 päivää ennen</item>
         <item>1 viikkoa ennen</item>
     </string-array>
+    <string-array name="default_reminder_later_time_labels">
+        <item>5 minuuttia</item>
+        <item>10 minuuttia</item>
+        <item>15 minuuttia</item>
+        <item>30 minuuttia</item>
+    </string-array>
     <string-array name="delete_repeating_labels">
         <item>Vain tämä tapahtuma</item>
         <item>Tämä ja tulevat tapahtumat</item>
