--- a/Finnish/main/Calendar.apk/res/values-fi-rFI/plurals.xml
+++ b/Finnish/main/Calendar.apk/res/values-fi-rFI/plurals.xml
@@ -84,6 +84,14 @@
         <item quantity="other">+%d</item>
         <item quantity="one">+1</item>
     </plurals>
+    <plurals name="reminder_later_toast">
+        <item quantity="other">Seuraava muistutus %1$d minuutin kuluttua</item>
+        <item quantity="one">Seuraava muistutus %1$d minuutin kuluttua</item>
+    </plurals>
+    <plurals name="repeat_custom_prompt">
+        <item quantity="other">joka %1$s %2$s</item>
+        <item quantity="one">joka %1$s %2$s</item>
+    </plurals>
     <plurals name="repeat_interval_frequency_day_multiple">
         <item quantity="other">%1$d päivää</item>
         <item quantity="one">%1$d päivä</item>
