--- a/Finnish/main/CloudBackup.apk/res/values-fi-rFI/plurals.xml
+++ b/Finnish/main/CloudBackup.apk/res/values-fi-rFI/plurals.xml
@@ -12,4 +12,16 @@
         <item quantity="other">Palautetaan %d tiedostoa</item>
         <item quantity="one">Palautetaan %d tiedosto</item>
     </plurals>
+    <plurals name="restore_app_order_prior">
+        <item quantity="other">Korkea prioriteetti: %d kohdetta</item>
+        <item quantity="one">Korkea prioriteetti: %d kohde</item>
+    </plurals>
+    <plurals name="restore_app_order_normal">
+        <item quantity="other">Normaali prioriteetti: %d kohdetta</item>
+        <item quantity="one">Normaali prioriteetti: %d kohde</item>
+    </plurals>
+    <plurals name="restore_app_order_installed">
+        <item quantity="other">%d sovellusta tällä laitteella</item>
+        <item quantity="one">%d sovellus tällä laiteella</item>
+    </plurals>
 </resources>
