--- a/Finnish/main/CloudService.apk/res/values-fi-rFI/arrays.xml
+++ b/Finnish/main/CloudService.apk/res/values-fi-rFI/arrays.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string-array name="user_detail_fixed_items">
+        <item>Näytä synkronoidut kohteet</item>
+        <item>Tallennustilan tiedot</item>
+    </string-array>
     <string-array name="korea_permission_groups_descriptions">
         <item>Tunnistaakseen synkronoidut kohteet</item>
         <item>Synkronoidakseen viestit</item>
