--- a/Finnish/main/CloudService.apk/res/values-fi-rFI/plurals.xml
+++ b/Finnish/main/CloudService.apk/res/values-fi-rFI/plurals.xml
@@ -68,4 +68,8 @@
         <item quantity="other">%s tuntia sitten</item>
         <item quantity="one">%s tunti sitten</item>
     </plurals>
+    <plurals name="provision_sync_items_status_title">
+        <item quantity="other">%s palvelua synkronoidaan Mi Pilveen</item>
+        <item quantity="one">%s palvelu synkronoidaan Mi Pilveen</item>
+    </plurals>
 </resources>
