--- a/Finnish/main/Weather.apk/res/values-fi-rFI/plurals.xml
+++ b/Finnish/main/Weather.apk/res/values-fi-rFI/plurals.xml
@@ -40,4 +40,12 @@
         <item quantity="other"> | %1$s henkilöä</item>
         <item quantity="one"> | %1$s henkilö</item>
     </plurals>
+    <plurals name="feedback_result_interval_time_too_short_minute">
+        <item quantity="other">Voit lähettää palautetta uudelleen %1$s minuutin kuluttua</item>
+        <item quantity="one">Voit lähettää palautetta uudelleen %1$s minuutin kuluttua</item>
+    </plurals>
+    <plurals name="feedback_result_interval_time_too_short_second">
+        <item quantity="other">Voit lähettää palautetta uudelleen %1$s sekunnin kuluttua</item>
+        <item quantity="one">Voit lähettää palautetta uudelleen %1$s sekunnin kuluttua</item>
+    </plurals>
 </resources>
