--- a/Finnish/main/Settings.apk/res/values-fi-rFI/plurals.xml
+++ b/Finnish/main/Settings.apk/res/values-fi-rFI/plurals.xml
@@ -295,6 +295,74 @@ Saat lisätietoja varmenteesta järjestelmänvalvojaltasi."</item>
         <item quantity="other">%d kohdetta</item>
         <item quantity="one">1 kohde</item>
     </plurals>
+    <plurals name="usage_state_device_explain_today">
+        <item quantity="other">Avattu %d kertaa tänään</item>
+        <item quantity="one">Avattu %d kerran tänään</item>
+    </plurals>
+    <plurals name="usage_state_device_explain_week">
+        <item quantity="other">Avattu %d kertaa viimeisen 7 päivän aikana</item>
+        <item quantity="one">Avattu %d kerran viimeisen 7 päivän aikana</item>
+    </plurals>
+    <plurals name="usage_state_device_noti_explain_today">
+        <item quantity="other">Vastaanotettu %d ilmoitusta tänään</item>
+        <item quantity="one">Vastaanotettu %d ilmoitus tänään</item>
+    </plurals>
+    <plurals name="usage_state_device_noti_explain_week">
+        <item quantity="other">Vastaanotettu %d ilmoitusta viimeisen 7 päivän aikana</item>
+        <item quantity="one">Vastaanotettu %d ilmoitus viimeisen 7 päivän aikana</item>
+    </plurals>
+    <plurals name="usage_state_hour">
+        <item quantity="other">%d tuntia</item>
+        <item quantity="one">%d tunti</item>
+    </plurals>
+    <plurals name="usage_state_hour24">
+        <item quantity="other">%d tuntia</item>
+        <item quantity="one">%d tunti</item>
+    </plurals>
+    <plurals name="usage_state_hour_text">
+        <item quantity="other">" tuntia"</item>
+        <item quantity="one">" tunti"</item>
+    </plurals>
+    <plurals name="usage_state_minute">
+        <item quantity="other">%d minuuttia</item>
+        <item quantity="one">%d minuutti</item>
+    </plurals>
+    <plurals name="usage_state_miunte_text">
+        <item quantity="other">" minuuttia"</item>
+        <item quantity="one">" minuutti"</item>
+    </plurals>
+    <plurals name="usage_state_noti_count">
+        <item quantity="other">%d ilmoitusta</item>
+        <item quantity="one">%d ilmoitus</item>
+    </plurals>
+    <plurals name="usage_state_unlock_count">
+        <item quantity="other">%d kertaa</item>
+        <item quantity="one">%d kerta</item>
+    </plurals>
+    <plurals name="usage_state_week_day_hour">
+        <item quantity="other">Viikonloppuna: %d tuntia</item>
+        <item quantity="one">Viikonloppuna: %d tunti</item>
+    </plurals>
+    <plurals name="usage_state_week_day_minute">
+        <item quantity="other">Viikonloppuna: %d minuuttia</item>
+        <item quantity="one">Viikonloppuna: %d minuutti</item>
+    </plurals>
+    <plurals name="usage_state_work_day_hour">
+        <item quantity="other">Arkipäivinä: %d tuntia</item>
+        <item quantity="one">Arkipäivinä: %d tunti</item>
+    </plurals>
+    <plurals name="usage_state_work_day_minute">
+        <item quantity="other">Arkipäivinä: %d minuuttia</item>
+        <item quantity="one">Arkipäivinä: %d minuutti</item>
+    </plurals>
+    <plurals name="usagestats_device_notification_des_hour">
+        <item quantity="other">" tuntia"</item>
+        <item quantity="one">" tunti"</item>
+    </plurals>
+    <plurals name="usagestats_device_notification_des_min">
+        <item quantity="other">" minuuttia"</item>
+        <item quantity="one">" minuutti"</item>
+    </plurals>
     <plurals name="virus_scan_app_find_risk">
         <item quantity="other">%d riskiä löytyi</item>
         <item quantity="one">%d riski löytyi</item>
