XML 9.4.16 päivitys Päivitettiin käännökset vastaamaan käännöspohjan versiota 9.4.16.

--- a/Finnish/main/MiuiVideoGlobal.apk/res/values-fi-rFI/plurals.xml
+++ b/Finnish/main/MiuiVideoGlobal.apk/res/values-fi-rFI/plurals.xml
@@ -36,4 +36,8 @@
         <item quantity="other">Näytä kaikki %d kommenttia</item>
         <item quantity="one">Näytä %d kommentti</item>
     </plurals>
+    <plurals name="subscriber">
+        <item quantity="other"> tilaajaa</item>
+        <item quantity="one"> tilaaja</item>
+    </plurals>
 </resources>
