--- a/Finnish/main/Calendar.apk/res/values-fi-rFI/plurals.xml
+++ b/Finnish/main/Calendar.apk/res/values-fi-rFI/plurals.xml
@@ -1,28 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <plurals name="Ndays">
-        <item quantity="other">%d päivää ennen</item>
-        <item quantity="one">%d päivä ennen</item>
+        <item quantity="other">%d päivää ennen tapahtumaa</item>
+        <item quantity="one">%d päivä ennen tapahtumaa</item>
     </plurals>
     <plurals name="Ndays_after_at">
         <item quantity="other">%1$d päivän kuluttua klo %2$s</item>
         <item quantity="one">%1$d päivän kuluttua klo %2$s</item>
     </plurals>
     <plurals name="Ndays_ago_at">
-        <item quantity="other">%1$d päivää ennen klo %2$s</item>
-        <item quantity="one">%1$d päivä ennen klo %2$s</item>
+        <item quantity="other">%1$d päivää ennen tapahtumaa klo %2$s</item>
+        <item quantity="one">%1$d päivä ennen tapahtumaa klo %2$s</item>
     </plurals>
     <plurals name="Nhours">
-        <item quantity="other">%d tuntia ennen</item>
-        <item quantity="one">%d tunti ennen</item>
+        <item quantity="other">%d tuntia ennen tapahtumaa</item>
+        <item quantity="one">%d tunti ennen tapahtumaa</item>
     </plurals>
     <plurals name="Nminutes">
-        <item quantity="other">%d minuuttia ennen</item>
-        <item quantity="one">%d minuutti ennen</item>
+        <item quantity="other">%d minuuttia ennen tapahtumaa</item>
+        <item quantity="one">%d minuutti ennen tapahtumaa</item>
     </plurals>
     <plurals name="Nweeks">
-        <item quantity="other">%d viikkoa ennen</item>
-        <item quantity="one">%d viikko ennen</item>
+        <item quantity="other">%d viikkoa ennen tapahtumaa</item>
+        <item quantity="one">%d viikko ennen tapahtumaa</item>
     </plurals>
     <plurals name="anniversary_day">
         <item quantity="other">%1$s päivää</item>
@@ -83,6 +83,18 @@
     <plurals name="month_more_events">
         <item quantity="other">+%d</item>
         <item quantity="one">+1</item>
+    </plurals>
+    <plurals name="reminder_custom_unit_day">
+        <item quantity="other">" päivää"</item>
+        <item quantity="one">" päivä"</item>
+    </plurals>
+    <plurals name="reminder_custom_unit_hour">
+        <item quantity="other">" tuntia"</item>
+        <item quantity="one">" tunti"</item>
+    </plurals>
+    <plurals name="reminder_custom_unit_minute">
+        <item quantity="other">" minuuttia"</item>
+        <item quantity="one">" minuutti"</item>
     </plurals>
     <plurals name="reminder_later_toast">
         <item quantity="other">Seuraava muistutus %1$d minuutin kuluttua</item>
