--- a/Finnish/main/ThemeManager.apk/res/values-fi-rFI/plurals.xml
+++ b/Finnish/main/ThemeManager.apk/res/values-fi-rFI/plurals.xml
@@ -4,6 +4,14 @@
         <item quantity="other">%d kommenttia</item>
         <item quantity="one">%d kommentti</item>
     </plurals>
+    <plurals name="resource_rating">
+        <item quantity="other">%1$.1f pistettä</item>
+        <item quantity="one">%1$.1f piste</item>
+    </plurals>
+    <plurals name="ringtone_nums">
+        <item quantity="other">%1$s soittoääntä</item>
+        <item quantity="one">%1$s soittoääni</item>
+    </plurals>
     <plurals name="theme_batch_has_update_text">
         <item quantity="other">Päivityksiä saatavilla %1$d teemalle.</item>
         <item quantity="one">Päivitys saatavilla %1$d teemalle.</item>
@@ -23,6 +31,14 @@
     <plurals name="transparent_wallpaper_filter_result">
         <item quantity="other">Löytyi %1$d sovellusta</item>
         <item quantity="one">Löytyi %1$d sovellus</item>
+    </plurals>
+    <plurals name="trial_countdown_notification_tip">
+        <item quantity="other">Pystyt kokeilemaan \"%2$s\" ilmaiseksi %1$d tunnin kuluttua</item>
+        <item quantity="one">Pystyt kokeilemaan \"%2$s\" ilmaiseksi %1$d tunnin kuluttua</item>
+    </plurals>
+    <plurals name="try_3_day">
+        <item quantity="other">3-päivän ilmainen kokeilu (%1$d kohdetta jäljellä tänään)</item>
+        <item quantity="one">3-päivän ilmainen kokeilu (%1$d kohde jäljellä tänään)</item>
     </plurals>
     <plurals name="wallpaper_staggered_item_text">
         <item quantity="other">%1$s | %2$d kuvaa</item>
