--- a/Finnish/main/Calendar.apk/res/values-fi-rFI/arrays.xml
+++ b/Finnish/main/Calendar.apk/res/values-fi-rFI/arrays.xml
@@ -34,6 +34,10 @@
         <item>Vain tämä tapahtuma</item>
         <item>Kaikki toistokerrat</item>
     </string-array>
+    <string-array name="close_alarm_repeating_labels">
+        <item>Vain tällä kertaa</item>
+        <item>Poista toistuva muistutus käytöstä</item>
+    </string-array>
     <string-array name="date_calculate_spinner">
         <item>Eteenpäin</item>
         <item>Taaksepäin</item>
@@ -54,6 +58,7 @@
         <item>10 minuuttia</item>
         <item>15 minuuttia</item>
         <item>30 minuuttia</item>
+        <item>1 tunti</item>
     </string-array>
     <string-array name="delete_repeating_labels">
         <item>Vain tämä tapahtuma</item>
@@ -93,6 +98,10 @@
     <string-array name="ligue_1">
         <item>5</item>
         <item>Ligue 1</item>
+    </string-array>
+    <string-array name="open_alarm_repeating_labels">
+        <item>Vain tällä kertaa</item>
+        <item>Aseta toistuva muistutus</item>
     </string-array>
     <string-array name="pisces_info">
         <item>kalat</item>
