--- a/Finnish/main/FileExplorer.apk/res/values-fi-rFI/plurals.xml
+++ b/Finnish/main/FileExplorer.apk/res/values-fi-rFI/plurals.xml
@@ -105,12 +105,12 @@
         <item quantity="many">Löytyi %1$d uutta tiedostoa</item>
     </plurals>
     <plurals name="backup_message_wechat_video">
-        <item quantity="other">"%1$d videos in WeChat conversations are about to expire. Back them up to your device's internal storage?"</item>
-        <item quantity="zero">"%1$d videos in WeChat conversations are about to expire. Back them up to your device's internal storage?"</item>
-        <item quantity="one">"%1$d video in WeChat conversations is about to expire. Back it up to your device's internal storage?"</item>
-        <item quantity="two">"%1$d videos in WeChat conversations are about to expire. Back them up to your device's internal storage?"</item>
-        <item quantity="few">"%1$d videos in WeChat conversations are about to expire. Back them up to your device's internal storage?"</item>
-        <item quantity="many">"%1$d videos in WeChat conversations are about to expire. Back them up to your device's internal storage?"</item>
+        <item quantity="other">%1$d videota WeChat-keskusteluissa on vanhentumassa. Varmuuskopioidaanko ne laitteesi sisäiselle tallennustilalle?</item>
+        <item quantity="zero">%1$d videota WeChat-keskusteluissa on vanhentumassa. Varmuuskopioidaanko ne laitteesi sisäiselle tallennustilalle?</item>
+        <item quantity="one">%1$d video WeChat-keskusteluissa on vanhentumassa. Varmuuskopioidaanko se laitteesi sisäiselle tallennustilalle?</item>
+        <item quantity="two">%1$d videota WeChat-keskusteluissa on vanhentumassa. Varmuuskopioidaanko ne laitteesi sisäiselle tallennustilalle?</item>
+        <item quantity="few">%1$d videota WeChat-keskusteluissa on vanhentumassa. Varmuuskopioidaanko ne laitteesi sisäiselle tallennustilalle?</item>
+        <item quantity="many">%1$d videota WeChat-keskusteluissa on vanhentumassa. Varmuuskopioidaanko ne laitteesi sisäiselle tallennustilalle?</item>
     </plurals>
     <plurals name="remote_video_update">
         <item quantity="other">Löytyi %1$s uutta videota</item>
