--- a/Finnish/main/SecurityCenter.apk/res/values-fi-rFI/plurals.xml
+++ b/Finnish/main/SecurityCenter.apk/res/values-fi-rFI/plurals.xml
@@ -134,6 +134,14 @@ Jos otat mobiilidatan uudelleen käyttöön, operaattorisi saattaa veloittaa sin
         <item quantity="other">Lisää %d minuuttia</item>
         <item quantity="one">Lisää %d minuutti</item>
     </plurals>
+    <plurals name="notification_battery_scan_consume_abnormal_title_split">
+        <item quantity="other">%2$d sovellusta, mukaan lukien %1$s kuluttaa akkua</item>
+        <item quantity="one">%2$d sovellus, mukaan lukien %1$s kuluttaa akkua</item>
+    </plurals>
+    <plurals name="pc_abnormal_scan_result_model_result_title">
+        <item quantity="other">%d sovellusta kuluttaa akkua</item>
+        <item quantity="one">%d sovellus kuluttaa akkua</item>
+    </plurals>
     <plurals name="people">
         <item quantity="other">Latauskertoja %1$d</item>
     </plurals>
