--- a/Finnish/main/MiGalleryLockscreen.apk/res/values-fi-rFI/arrays.xml
+++ b/Finnish/main/MiGalleryLockscreen.apk/res/values-fi-rFI/arrays.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="feature_desc">
-        <item>Korjattiin joitain tunnettuja ongelmia.</item>
+        <item>Korjattiin joitakin tunnettuja ongelmia.</item>
     </string-array>
 </resources>
