--- a/Finnish/main/CloudService.apk/res/values-fi-rFI/plurals.xml
+++ b/Finnish/main/CloudService.apk/res/values-fi-rFI/plurals.xml
@@ -56,6 +56,10 @@
         <item quantity="other">%d piilotettua kuvaa on synkronoimatta. Kirjaudu ulos, kun kaikki kohteet on synkronoitu pitääksesi ne; muussa tapauksessa kohteet poistetaan.</item>
         <item quantity="one">%d piilotettu kuva on synkronoimatta. Kirjaudu ulos, kun kaikki kohteet on synkronoitu pitääksesi ne; muussa tapauksessa kohteet poistetaan.</item>
     </plurals>
+    <plurals name="dirty_phrase_count">
+        <item quantity="other">%d usein käytettyä lausetta</item>
+        <item quantity="one">%d usein käytetty lause</item>
+    </plurals>
     <plurals name="micloud_manual_pause_and_resume">
         <item quantity="other">Synkronointi on pysäytetty. Jatketaan %d minuutin kuluttua…</item>
         <item quantity="one">Synkronointi on pysäytetty. Jatketaan %d minuutin kuluttua…</item>
