--- a/Finnish/main/MiuiGallery.apk/res/values-fi-rFI/plurals.xml
+++ b/Finnish/main/MiuiGallery.apk/res/values-fi-rFI/plurals.xml
@@ -72,6 +72,18 @@
         <item quantity="other">%1$d kuvaa ja videota</item>
         <item quantity="one">%1$d kuva tai video</item>
     </plurals>
+    <plurals name="burst_image_download_item_title_count">
+        <item quantity="other">%d kuvaa</item>
+        <item quantity="one">%d kuva</item>
+    </plurals>
+    <plurals name="burst_save_confirm_dialog_message">
+        <item quantity="other">Tallennetaanko %d valittua kuvaa ja poistetaanko loput?</item>
+        <item quantity="one">Tallennetaanko %d valittu kuva ja poistetaanko loput?</item>
+    </plurals>
+    <plurals name="burst_save_selected">
+        <item quantity="other">Tallenna %d valittua kuvaa</item>
+        <item quantity="one">Tallenna %d valittu kuva</item>
+    </plurals>
     <plurals name="cloud_storage_photo_num">
         <item quantity="other">%d kuvaa</item>
         <item quantity="one">%d kuva</item>
@@ -91,6 +103,18 @@
     <plurals name="custom_select_title_items_selected">
         <item quantity="other">%d kohdetta valittu</item>
         <item quantity="one">%d kohde valittu</item>
+    </plurals>
+    <plurals name="delete_burst_photo_from_all_devices_and_cloud_msg">
+        <item quantity="other">Poistetaanko %d sarjakuvaa Mi Pilvestä ja kaikista synkronoiduista laitteista?</item>
+        <item quantity="one">Poistetaanko %d sarjakuva Mi Pilvestä ja kaikista synkronoiduista laitteista?</item>
+    </plurals>
+    <plurals name="delete_burst_photo_from_local">
+        <item quantity="other">Poistetaanko %d sarjakuvaa?</item>
+        <item quantity="one">Poistetaanko %d sarjakuva?</item>
+    </plurals>
+    <plurals name="delete_burst_photo_from_this_album_and_cloud_msg">
+        <item quantity="other">Poistetaanko %d sarjakuvaa Mi Pilvestä ja tältä laitteelta?</item>
+        <item quantity="one">Poistetaanko %d sarjakuva Mi Pilvestä ja tältä laitteelta?</item>
     </plurals>
     <plurals name="delete_media_from_all_devices_and_cloud_msg">
         <item quantity="other">Poistetaanko %d kohdetta kaikista laitteista ja Mi Pilvestä?</item>
@@ -115,6 +139,10 @@
     <plurals name="delete_photo_from_this_album_and_cloud_msg">
         <item quantity="other">Poistetaanko %d kuvaa tästä albumista ja Mi Pilvestä?</item>
         <item quantity="one">Poistetaanko tämä kuva tästä albumista ja Mi Pilvestä?</item>
+    </plurals>
+    <plurals name="delete_third_party_burst_photo">
+        <item quantity="other">Poistetaanko %d sarjakuvaa laitteeltasi?</item>
+        <item quantity="one">Poistetaanko %d sarjakuva laitteeltasi</item>
     </plurals>
     <plurals name="delete_video_from_all_devices_and_cloud_msg">
         <item quantity="other">Poistetaanko %d videota kaikista laitteista ja Mi Pilvestä?</item>
